[build-system]
requires=["setuptools>=43.0.0","wheel","setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gogoesgone"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{name = "Geet George", email = "geet.george@mpimet.mpg.de"}]
dependencies = [
  "fsspec",
  "kerchunk",
  "h5py",
  "dask",
  "s3fs",
  "xarray",
  "numpy"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests","docs"]

[tool.setuptools_scm]
write_to = "src/_version.py"
